--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jmarca/map_widget",
   "devDependencies": {
     "express": "^4.10.4",
-    "serve-static": "^1.7.1"
+    "serve-static": "^1.7.1",
+    "spatial_routes": "git://github.com/jmarca/spatial_routes.git"
   }
 }
