--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
   "devDependencies": {
     "express": "^4.10.4",
     "serve-static": "^1.7.1",
-    "spatial_routes": "git://github.com/jmarca/spatial_routes.git"
+    "calvad_grid_merge_sqlquery": "git://github.com/jmarca/calvad_grid_merge_sqlquery",
+    "spatial_routes": "git://github.com/jmarca/spatial_routes.git",
+    "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
+    "hpms_locator": "git://github.com/jmarca/hpms_locator.git"
+  },
+  "dependencies": {
+    "config_okay": "0.0.2",
+    "lodash": "^2.4.1",
+    "queue-async": "^1.0.7"
   }
 }
